test-cases/final-dump/dup_submodule.exp
Error detected during preliminary processing of module dup_submodule
final-dump/dup_submodule.wybe:6:1: module dup_submodule.again already exists
