test-cases/final-dump/dup_submodule.wybe
module again {
   pub def answer:int = 42
}

# should be an error:
module again {
   pub def foo:int = answer
}

!println "answer = $answer"
!println "foo = $foo"
